--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
 		<script src="node_modules/vue/dist/vue.js"></script>
 		<script src="js/store.js"></script>
 		<script src="js/app.js"></script>
-		<script src="bundle.js"></script>
+		<script src="dist/bundle.js"></script>
 	</body>
 </html>
