Add image to todoApp

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 				</button>
 			</footer>
 		</section>
+    <div id="image">
+    </div>
+
 		<footer class="info">
 			<p>Double-click to edit a todo</p>
 			<p>Written by <a href="http://evanyou.me">Evan You</a></p>
